adding more prints to the